alteracoes nas provas e questoes

--- a/src/components/Provas/form.html
+++ b/src/components/Provas/form.html
@@ -110,7 +110,7 @@
       </form>
     </div>
     <div class="card-action">
-      <a href="#/provas">Voltar</a>
+      <a class="waves-effect waves-light btn indigo accent-1 darken-4" href="#/provas">Voltar</a>
     </div>
   </div>
 </div>
