--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -275,7 +275,7 @@
       </form>
     </div>
     <div class="card-action">
-      <a href="#/questoes">Voltar</a>
+      <a class="waves-effect waves-light btn indigo accent-1 darken-4" href="#/questoes">Voltar</a>
     </div>
   </div>
 </div>
