--- a/src/components/Questoes/form.html
+++ b/src/components/Questoes/form.html
@@ -31,61 +31,23 @@
           <label class="active">Série</label>
         </div>
         <div class="input-field col s1 ">
-          <select v-model="questao1.nivel_id" id="nivel_id" class="browser-default">
+          <select v-model="questao1.nivel_id" id="nivel_id" class="browser-default" @change="getCategorias">
             <option value="" disabled selected>Selecione o nível</option>
             <option v-for="nivel in nivels.data" :value="nivel.id">{{nivel.nivel}}</option>
           </select>
           <label class="active">Nível</label>
         </div>
         <div class="input-field col s3">
-          <select v-model="questao1.categoria_id" id="categoria_id" class="browser-default">
-            <option value="" disabled selected>Selecione a Categoria</option>
-            <option value="1">Números e Operações</option>
-            <option value="2">Tratamento da Informação</option>
-            <option value="3">Grandezas e Medidas</option>
-            <option value="4">Espaços e Formas</option>
-            <option value="5">Tratamento de Informações</option>
+          <select v-model="questao1.categoria_id" id="categoria_id" class="browser-default" @change="getHabilidades">
+            <option value="" disabled selected>Selecione o Tema/Tópicos</option>
+            <option v-for="categoria in categorias.data" :value="categoria.id">{{categoria.categoria}}</option>
           </select>
-          <label class="active">Categoria</label>
+          <label class="active">Tema/Tópicos</label>
         </div>
         <div class="input-field col s3">
           <select v-model="questao1.habilidade_id" id="habilidade_id" class="browser-default">
             <option value="" disabled selected>Selecione a Habilidades</option>
-            <option value="1">D16 - Identificar a localização de números inteiros na
-              reta numérica.
-            </option>
-            <option value="2">D17 - Identificar a localização de números racionais na
-              reta numérica.
-            </option>
-            <option value="3">D18 - Efetuar cálculos com números inteiros,
-              envolvendo as operações (adição, subtração,
-              multiplicação, divisão, potenciação).
-            </option>
-            <option value="4">D19 - Resolver problema com números naturais,
-              envolvendo diferentes significados das operações
-              (adição, subtracão, multiplicação, divisão,
-              potenciação).
-            </option>
-            <option value="5">D20 - Resolver problema com números inteiros
-              envolvendo as operações (adição, subtracão,
-              multiplicação, divisão, potenciação).
-            </option>
-            <option value="6">D21 - Reconhecer as diferentes representações de um
-              número racional.
-            </option>
-            <option value="7">D22 - Identificar fração como representação que pode
-              estar associada a diferentes significados.
-            </option>
-            <option value="8">D23 - Identificar frações equivalentes.</option>
-            <option value="9"> D24 - Reconhecer as representações decimais dos
-              números racionais como uma extensão do sistema de
-              numeração decimal, identificando a existência de
-              "ordens" como décimos, centésimos e milésimos.
-            </option>
-            <option value="10">D25 - Efetuar cálculos que envolvam operações com
-              números racionais (adição, subtracão, multiplicação,
-              divisão, potenciação).
-            </option>
+            <option v-for="habilidade in habilidades.data" :value="habilidade.id">{{habilidade.habilidade}}</option>
           </select>
           <label class="active">Habilidades</label>
         </div>
@@ -133,7 +95,7 @@
 
         <div class="input-field col s2">
           <p>
-            <input v-model="questao1.correta" :value="1" type="radio" name="gender" class="with-gap" id="correta1"/>
+            <input v-model="questao1.correta" value="1" type="radio" name="gender" class="with-gap" id="correta1"/>
             <label for="correta1">Alternativa correta</label>
           </p>
         </div>
@@ -163,7 +125,7 @@
 
         <div class="input-field col s2">
           <p>
-            <input v-model="questao1.correta" :value="2" type="radio" name="gender" class="with-gap" id="correta2"/>
+            <input v-model="questao1.correta" value="2" type="radio" name="gender" class="with-gap" id="correta2"/>
             <label for="correta2">Alternativa correta</label>
           </p>
         </div>
@@ -194,7 +156,7 @@
 
         <div class="input-field col s2">
           <p>
-            <input v-model="questao1.correta" :value="3" type="radio" name="gender" class="with-gap" id="correta3"/>
+            <input v-model="questao1.correta" value="3" type="radio" name="gender" class="with-gap" id="correta3"/>
             <label for="correta3">Alternativa correta</label>
           </p>
         </div>
@@ -225,7 +187,7 @@
 
         <div class="input-field col s2">
           <p>
-            <input v-model="questao1.correta" :value="4" type="radio" name="gender" class="with-gap" id="correta4"/>
+            <input v-model="questao1.correta" value="4" type="radio" name="gender" class="with-gap" id="correta4"/>
             <label for="correta4">Alternativa correta</label>
           </p>
         </div>
@@ -256,7 +218,7 @@
 
         <div class="input-field col s2">
           <p>
-            <input v-model="questao1.correta" :value="5" type="radio" name="gender" class="with-gap" id="correta5"/>
+            <input v-model="questao1.correta" value="5" type="radio" name="gender" class="with-gap" id="correta5"/>
             <label for="correta5">Alternativa correta</label>
           </p>
         </div>
